raised z-index for demo button to fix issue where couldn't be clicked in mobile. Fixed weather demo to properly display error message within card.

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -101,6 +101,10 @@
           padding: 10px;
           width: 200px;
           cursor: pointer;
+
+          @include mobile{
+            z-index: 999;
+          }
         }
       }
     }
